force-app/main/default/objects/OpenAI_Settings__mdt/fields/Moderation_score__c.field-meta.xml
<CustomField>
    <fullName>Moderation_score__c</fullName>
    <label>Moderation score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>