force-app/main/default/objects/OpenAI_Settings__mdt/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>