force-app/main/default/objects/OpenAI_Settings__mdt/fields/Violation_message__c.field-meta.xml
<CustomField>
    <fullName>Violation_message__c</fullName>
    <label>Violation message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>